<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/animeListFragment">

    <fragment
        android:id="@+id/animeListFragment"
        android:name="com.fauzan.myanime.presentation.anime_list.AnimeListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_anime_list">

        <action
            android:id="@+id/action_animeListFragment_to_animeDetailFragment"
            app:destination="@id/animeDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/animeDetailFragment"
        android:name="com.fauzan.myanime.presentation.anime_detail.AnimeDetailFragment"
        android:label="@string/detail_title"
        tools:layout="@layout/fragment_anime_detail">

        <argument
            android:name="anime"
            app:argType="com.fauzan.myanime.presentation.model.AnimeUiModel" />
    </fragment>

    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.fauzan.myanime.presentation.favorite.FavoriteFragment"
        android:label="@string/favorites_title"
        app:moduleName="favorite">

        <action
            android:id="@+id/action_favoriteFragment_to_animeDetailFragment"
            app:destination="@id/animeDetailFragment" />
    </fragment>

</navigation>
